<resources>
    <string name="app_name">看看相册</string>

    <string name="state_loading">正在加载…</string>
    <string name="state_no_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="flight_log_dialog_share_title">分享图片</string>
    <string name="language">语言</string>
    <string name="chose_album">选择相册</string>
    <string name="login">登录</string>
    <string name="regist">注册账号</string>
    <string name="share">分享</string>
    <string name="read">读取文字</string>
    <string name="cancel">取消</string>
    <string name="start_identifying">开始识别（第一次识别耗时较长）</string>
    <string name="is_identifying">正在识别中，请稍后</string>
    <string name="search_keywords">搜索关键字</string>
    <string name="user_exist">用户已存在</string>
    <string name="username_or_password_wrong">用户名或密码错误</string>
    <string name="clipboard">已复制到剪切板</string>
    <string name="input_account">输入账号</string>
    <string name="input_password">输入密码</string>
    <string name="primaryVip">初级vip</string>
    <string name="intermediateVip">中级vip</string>
    <string name="seniorVip">高级vip</string>
    <string name="commonUser">普通用户</string>
    <string name="yuan">元</string>
    <string name="pictures">张图片</string>
    <string name="username">用户名:</string>
    <string name="vipLevel">Vip等级:</string>
    <string name="identity_count">识别数量:</string>
    <string name="logout">退出登录</string>
    <string name="voucher_center">充值中心</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="regist_submit">注册</string>
    <string name="password_no_space">用户名和密码不能包含空格</string>
    <string name="name_or_pass_not_null">用户名和密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="alredy_login">已在别的地方登录，请先退出登录</string>
    <string name="click_error">重复点击</string>


</resources>
